descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2009-08-XX  Release 7.16.0                                     ---
----------------------------------------------------------------------

* increased maximum size of framebuffer windows - Sean Morrison
* removed framebuffer option 'f' from interfaces - Sean Morrison
* reversed and simplified arguments to copyeval command - Bob Parker
* 3dm-g converter creates automatic top-level combination - Cliff Yapp
* added procedural 'human' generator command and gui plugin to archer
	- Stephen Kennedy, Bob Parker
* added BoT commands to archer (e.g., bot_flip, bot_sync) - Bob Parker
* implemented support for sub-object erasures - Bob Parker
* changed Pro/E exporter to output unoriented BoT objects - Bob Parker
* fixed a rendering bug with left-handed BoT objects - Bob Parker
* pipe now validates independent of parameter order - Daniel Roßberg
* added '-r' color randomize option to 3dm-g importer - Cliff Yapp
* enhanced '-v' verbosity option in 3dm-g importer - Cliff Yapp
* readded -A & -o attribute options to 'draw' and 'erase' - Bob Parker
* fixed bug in 'E' command to show object names - John Anderson
* initial obj-g geometry importer - Erik Greenwald
* Pro/E export plugin creates a 'Proe_Name' attribute - Bob Parker
* enhanced rtedge with antialias and both side options - Sean Morrison
* search command now works in Archer - Cliff Yapp
* make_bb now handles empty combinations correctly - Bob Parker
* no more rtweight crashing when PWD or HOME are unset - Sean Morrison
* fixed "Invalid NMG" empty output bug in g-stl - Sean Morrison
* improved BoT raytracing with vertex validation - John Anderson
* fixed Mac OS X 10.5 OGL and X11 display manager crash affecting mged
	- Sean Morrison, Mike Tegtmeyer, Tim Myers
* added experimental exporter to Panda3d EGG format - Erik Greenwald